Responsive de Escritorio

--- a/css/style.css
+++ b/css/style.css
@@ -14,21 +14,31 @@ body {
     height: 100%;
     background-image: url("../img/Fondo-01.svg");
     background-repeat: no-repeat;
-    background-size: 100% 100%;
+    background-size: 100% auto;
     margin: 0;
     background-color: black;
 }
 
-.white-svg {
-    filter: invert(100%) sepia(0%) saturate(7468%) hue-rotate(88deg) brightness(99%) contrast(102%);
+.title {
+    width: 100%; 
+    text-align: center;
 }
 
-.color-ccc {
-    filter: invert(77%) sepia(100%) saturate(0%) hue-rotate(140deg) brightness(92%) contrast(92%);
+.title > p {
+    display: inline-block;
+    vertical-align: middle;
+    color: black;
 }
 
-.color-777 {
-    filter: invert(31%) sepia(3%) saturate(0%) hue-rotate(267deg) brightness(102%) contrast(93%);
+.info-box {
+    width: 100%; 
+    text-align: center;
+}
+
+.info-box > p {
+    display: inline-block;
+    vertical-align: middle;
+    color: #999
 }
 
 .inline > * {
@@ -36,102 +46,214 @@ body {
     vertical-align:middle;
 }
 
-.main-menu {
+.other-menu .left {
     position: absolute;
-    top: calc(50% + 12vh);
+    left: 0;
 }
 
-.center {
-    width: 100%;
-}
-
-.center > .inner {
-    display: table;
-    margin: 0 auto;
-}
-
-.bottom {
-    width: 100%;
+.other-menu .right {
     position: absolute;
-    top: calc(50% + 31vh);
+    right: 0;
 }
 
-.right {
-    float: right;
+.svg-color-white {
+    filter: invert(100%) sepia(0%) saturate(7468%) hue-rotate(88deg) brightness(99%) contrast(102%);
 }
 
-.icon {
-    margin: 0;
-    width: 6vw;
-    display: inline;
+.svg-color-gray {
+    filter: invert(77%) sepia(100%) saturate(0%) hue-rotate(140deg) brightness(92%) contrast(92%);
 }
 
-.text-white {
-    color: white;
-    font-size: 1.3vw;
+.svg-color-darkgray {
+    filter: invert(7%) sepia(54%) saturate(0%) hue-rotate(300deg) brightness(99%) contrast(87%);
 }
 
 .text-black {
     color: black;
-    font-size: 1.3vw;
 }
 
-.side-menu {
-    position: absolute;
-    width: 20vw;
-    height: 100%;
-    background-color: rgba(255,255,255,0.8);
-    z-index: 100;
-    left: -20vw;
+/* Smartphones (landscape) ----------- */
+@media (min-width : 320px) {
+    .main-menu, .other-menu {
+        display: none;
+    }
+
+    .icon {
+        margin: 0;
+        width: 100px;
+        display: inline;
+    }
+
+    .info-box {
+        position: absolute;
+        bottom: 8vh;
+        left: 0;
+    }
 }
 
-.side-menu.side-menu-visible {
-    left: 0;
+/* Smartphones (portrait) ----------- */
+@media (max-width: 480px) {
+    .bg {
+        background-size: 180% auto;
+        background-position-x: center;
+    }
 }
 
-.side-menu .side-toggle {
-    position: absolute;
-    top: calc(50% - 60px);
-    left: 20vw;
+@media (min-width : 480px) {
+    .main-menu, .other-menu {
+        display: none;
+    }
+
+    .icon {
+        margin: 0;
+        width: 65px;
+        display: inline;
+    }
+
+    .info-box {
+        position: absolute;
+        bottom: 8vh;
+        left: 0;
+    }
+
+    .other-menu {
+        position: absolute;
+        bottom: 18vh;
+    }
+}
+
+/* Small Screens ----------- */
+@media (max-width: 800px) {
+    .bg {
+        background-size: 190% auto;
+        background-position-x: center;
+    }
+}
+
+@media (min-width : 800px) {
+    .main-menu, .other-menu {
+        display: none;
+    }
+
+    .icon {
+        margin: 0;
+        width: 100px;
+        display: inline;
+    }
+
+    .info-box {
+        position: absolute;
+        bottom: 8vh;
+        left: 0;
+    }
+
+    .other-menu {
+        position: absolute;
+        bottom: 18vh;
+    }
+}
+
+/* Laptop Screens ----------- */
+@media (min-width : 1025px) {
+    .main-menu {
+        position: absolute;
+        top: 60%;
+    }
     
-    width: 50px;
-    height: 120px;
-    background-color: rgb(0, 145, 182);
+    .main-menu, .other-menu {
+        display: block;
+        width: 100%;
+    }
 
-    border-top-right-radius: 40px;
-    border-bottom-right-radius: 40px;
+    .main-menu > *, .other-menu > * {
+        display: table;
+        margin: 0 auto;
+    }
 
-    display: flex;
-    cursor: pointer;
+    .icon {
+        margin: 0;
+        width: 100px;
+        display: inline;
+    }
+
+    .info-box {
+        position: absolute;
+        top: 85%;
+        left: 0;
+    }
+
+    .other-menu {
+        position: absolute;
+        bottom: 155px;
+    }
 }
 
-.side-toggle .bars {
-    margin: auto;
+/* Big Screens ----------- */
+@media (min-width : 1280px) {
+    .main-menu {
+        position: absolute;
+        top: 65%;
+    }
+    
+    .main-menu, .other-menu {
+        display: block;
+        width: 100%;
+    }
+
+    .main-menu > *, .other-menu > * {
+        display: table;
+        margin: 0 auto;
+    }
+
+    .icon {
+        margin: 0;
+        width: 100px;
+        display: inline;
+    }
+
+    .info-box {
+        position: absolute;
+        top: 85%;
+        left: 0;
+    }
+
+    .other-menu {
+        position: absolute;
+        bottom: 155px;
+    }
 }
 
-.side-toggle .bar1, .side-toggle .bar2, .side-toggle .bar3 {
-    width: 35px;
-    height: 5px;
-    background-color: #fff;
-    margin: 6px 0;
-    transition: .3s;
-}
+/* Bigger Screens ----------- */
+@media (min-width : 1450px) {
+    .main-menu {
+        position: absolute;
+        top: 65%;
+    }
+    
+    .main-menu, .other-menu {
+        display: block;
+        width: 100%;
+    }
 
-.side-toggled .bar1 {
-    -webkit-transform: rotate(-45deg) translate(-9px, 6px);
-    transform: rotate(-45deg) translate(-9px, 6px);
-}
-  
-.side-toggled .bar2 {
-    opacity: 0;
-}
-  
-.side-toggled .bar3 {
-    -webkit-transform: rotate(45deg) translate(-8px, -8px);
-    transform: rotate(45deg) translate(-8px, -8px);
-}
+    .main-menu > *, .other-menu > * {
+        display: table;
+        margin: 0 auto;
+    }
 
-.side-menu .side-bottom {
-    position: absolute;
-    bottom: 0%;
+    .icon {
+        margin: 0;
+        width: 100px;
+        display: inline;
+    }
+
+    .info-box {
+        position: absolute;
+        bottom: 5vh;
+        left: 0;
+    }
+
+    .other-menu {
+        position: absolute;
+        bottom: 155px;
+    }
 }
