--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,13 @@ body {
     overflow: hidden;
 }
 
+html,
+body {
+    overflow: hidden;
+    position: relative;
+    height: 100%;
+}
+
 .center {
     width: 100%;
 }
@@ -112,19 +119,22 @@ body {
 .side-menu {
     position: absolute;
     width: 100%;
-    height: 300px;
+    height: 200px;
     background-color: rgba(172,172,172,0.8);
     z-index: 100;
-    /*left: -200px;*/
-    bottom: -300px;
+    bottom: -200px;
 
     box-shadow: 5px -3px 23px 0px #000000;
 }
 
 .side-menu .side-container {
     width: 100%;
-    height: 200px;
-    overflow-y: hidden;
+    height: 100%;
+    overflow-y: auto;
+}
+
+.side-menu .side-menu-container {
+    width: 100%;
 }
 
 .side-menu .side-title {
@@ -169,8 +179,6 @@ body {
 
 .side-menu .side-left {
     width: 60%;
-    height: 100%;
-    overflow-y: auto;
     float: left;
     text-align: center;
 }
@@ -178,7 +186,6 @@ body {
 .side-menu .side-right {
     width: 40%;
     height: 100%;
-    overflow-y: auto;
     float: right;
     text-align: center;
 }
@@ -208,6 +215,15 @@ body {
 .icon {
     width: 80px;
 }
+
+iframe.fixed {
+    height: 0;
+    max-height: 100%;
+    max-width: 100%;
+    min-height: 100%;
+    min-width: 100%;
+    width: 0;
+  }
 
 @media (min-width : 800px) {
     .main-menu, .other-menu {
